Development history / change log, please read from bottom up

Version 2.8x - xx Yyy 2011

refine time line to support days, month and years as period
update UltraDuoPlus dialog to read battery cycle data

Version 2.82 - 03 Jun 2011

UltramatTrioPlus devices fix bug while data gathering output channel 3
Ultramat16/16S/18 correct sycnc_ref_ordinal typo in English config XML 
add UltraDuoPlus40
add UltraDuoPlus50
QC-Copter fix problem adding new data set while data gathering
UniLog/LiPoWatch update code to prevent mixing record sets sequence 
UniLog refine efficiency calculation, fix typo in device XML
 - correct UniLog mA/m calculation  
 - fix UniLog dialog parameter update problems
fix menu cool bar order problem
while data gathering and creating new record sets take over visualization properties from previous active record set
update device XMLs to reflect difference between Altitude and Height (English only)
enable back level version usage parallel installation in respect of configuration XMLs update (future versions only)
fix error handling record properties, used by UniLog and Picolario



Version 2.81 - 15 May 2011

update Graupner Ultra Duo Plus 60 to select object key in dependency of battery memory
add Graupmer Ultramat 12
add Graupmer Ultramat 16
add Graupmer Ultramat 16S
add Graupmer Ultramat Trio Plus 14
add Graupmer Ultramat Trio Plus 16S
add Graupmer Ultramat 18
add Graupmer UltraDuoPlus 45
eStations fix do not display empty balance curve 
enable smooth curves at current drop in context menu
fix - problem while updating/switching object image
fix - make battery type record dependent
enable battery memory to object key matching for devices with battery memory management
detect and switch wrong Ultramat device 
update data table time format to HH:mm:ss
update SWT to 3.7M7 (solving Mac OS 10.6.x update problem)
make UNIX USB2Serial driver visible
update documentation 


Version 2.80 - 15 Apr 2011

add Graupner Ultra Duo Plus 60