@@ -3,7 +3,7 @@
 #execute "ant clean install" to build all and install
 
 #version.num must reflect the version number of the application and will be used as version of the plug-in manifest
-version.num=2.82
+version.num=2.83
 
 #standard installation directories
 install.dir.linux=/opt
