@@ -300,7 +300,9 @@
 		<copy todir="${output.windows32.program}" flatten="yes">
 			<fileset file="DataExplorer/build/*.jar" />
 			<fileset file="build/misc/DataExplorer.exe" />
+			<!--
 			<fileset file="build/misc/DataExplorerSplash.png" />
+			-->
 			<fileset file="build/misc/DevicePropertiesEditor.exe" />
 			<!--
             <fileset file="build/misc/DataExplorer.ico" />
@@ -316,7 +318,9 @@
 		<copy todir="${output.windows64.program}" flatten="yes">
 			<fileset file="DataExplorer/build/*.jar" />
 			<fileset file="build/misc/DataExplorer.exe" />
+			<!--
 			<fileset file="build/misc/DataExplorerSplash.png" />
+			-->
 			<fileset file="build/misc/DevicePropertiesEditor.exe" />
 			<!--
             <fileset file="build/misc/DataExplorer.ico" />
@@ -335,7 +339,9 @@
 			<fileset file="build/misc/DevicePropertiesEditor.xpm" />
 			<fileset file="build/misc/DataExplorer.xpm" />
 			<fileset file="build/misc/DataExplorer" />
+			<!--
 			<fileset file="build/misc/DataExplorerSplash.png" />
+			-->
 			<fileset file="build/misc/DataExplorer.desktop" />
 			<fileset file="build/misc/DevicePropertiesEditor" />
 			<fileset file="build/misc/DevicePropertiesEditor.desktop" />
@@ -352,7 +358,9 @@
 			<fileset file="build/misc/DevicePropertiesEditor.xpm" />
 			<fileset file="build/misc/DataExplorer.xpm" />
 			<fileset file="build/misc/DataExplorer" />
+			<!--
 			<fileset file="build/misc/DataExplorerSplash.png" />
+			-->
 			<fileset file="build/misc/DataExplorer.desktop" />
 			<fileset file="build/misc/DevicePropertiesEditor" />
 			<fileset file="build/misc/DevicePropertiesEditor.desktop" />
@@ -365,7 +373,9 @@
 
 		<copy todir="${output.mac32.program}" flatten="yes">
 			<fileset file="DataExplorer/build/*.jar" />
+			<!--
 			<fileset file="build/misc/DataExplorerSplash.png" />
+			-->
 			<fileset file="build/misc/DataExplorer.icns" />
 			<fileset file="build/misc/DevicePropertiesEditor.icns" />
 		</copy>
@@ -386,7 +396,9 @@
 
 		<copy todir="${output.mac64.program}" flatten="yes">
 			<fileset file="DataExplorer/build/*.jar" />
+			<!--
 			<fileset file="build/misc/DataExplorerSplash.png" />
+			-->
 			<fileset file="build/misc/DataExplorer.icns" />
 			<fileset file="build/misc/DevicePropertiesEditor.icns" />
 		</copy>
