@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>DataExplorerMac64</string>
 	<key>CFBundleGetInfoString</key>
-	<string>2.82, Copyright 2008,2009,2010,2011 Winfried Bruegmann</string>
+	<string>2.83, Copyright 2008,2009,2010,2011 Winfried Bruegmann</string>
 	<key>CFBundleIconFile</key>
 	<string>DataExplorer.icns</string>
 	<key>CFBundleIdentifier</key>
@@ -19,11 +19,11 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.82</string>
+	<string>2.83</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>2.82</string>
+	<string>2.83</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.5</string>
 </dict>
