@@ -6,5 +6,6 @@ GDE_DIR="$(dirname ${0})/../Resources"
 cd ${GDE_DIR}
 
 echo java -XstartOnFirstThread -d64 -Dfile.encoding=UTF-8 -splash:./DataExplorerSplash.png -jar -Xms32m -Xmx256m ./DataExplorer.jar
-java -XstartOnFirstThread -d64 -Dfile.encoding=UTF-8 -jar -Xms32m -Xmx256m ./DataExplorer.jar
+echo argument $1
+java -XstartOnFirstThread -d64 -Dfile.encoding=UTF-8 -jar -Xms32m -Xmx256m ./DataExplorer.jar $1
 
