@@ -3,6 +3,7 @@ Development history / change log, please read from bottom up
 Version 2.8x - xx Yyy 2011
 
 refine time line to support days, month and years as period
+circumvent java 1.6 update 26 problem with splash and file dialog
 update UltraDuoPlus dialog to read battery cycle data
 
 Version 2.82 - 03 Jun 2011
